part2/mainapp/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mainapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mainapp
  template:
    metadata:
      labels:
        app: mainapp
    spec:
      containers:
        - name: mainapp
          image: heseduud/mainapp:2.01v4
