part2/mainapp/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: applications
  name: mainapp-svc
spec:
  type: ClusterIP
  selector:
    app: mainapp
  ports:
  - name: http
    protocol: TCP
    port: 2345
    targetPort: 3000
